@startuml
class User
{
    + _todoItemService: TodoItemService
}

class Item {
    + id: string
    + description: String
    + createTime: Date
    + DueDate: Date
    + Tags: List<string>
    + ModificationHistory: List<Modification> 
    + ModifyItem(description: String): void
}

class Modification{
    + timestamp: Date
}
class TodoItemService{
    - _todosRepository: ITodosRepository ;
    + TodoItems: List<TodoItem>;
    + Create(description: string, dueDate: DateTimeOffset): TodoItem
}

interface ITodosRepository{
    + CountTodoItemsByDueDate(dueDate: Date): int;
}

Item "1" -- "0..*" Modification
TodoItemService "1" -- "0..*" Item
TodoItemService "1" -- "1" ITodosRepository
User "0..*" -- "1" TodoItemService

@enduml